force-app/main/default/objects/User.object
<CustomObject>
    <fields>
        <fullName>SBQQ__DefaultProductLookupTab__c</fullName>
        <description>Default tab for this user in Product Lookup page.</description>
        <inlineHelpText>Customize default tab in Product Lookup page.</inlineHelpText>
        <label>Default Product Lookup Tab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guided Selling</fullName>
                    <default>true</default>
                    <label>Guided Selling</label>
                </value>
                <value>
                    <fullName>Search Filters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DiagnosticToolEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable to run pricing diagnostics during a Quote Line Editor Calculate.</description>
        <inlineHelpText>Use to enable CPQ Diagnostic Tool, only available if org setting is enabled. Contact support to enable this capability.</inlineHelpText>
        <label>Enable Diagnostic Tool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OutputFormatChangeAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this user is allowed to change output format of quote documents.</description>
        <inlineHelpText>Check to allow this user to change output format of quote documents.</inlineHelpText>
        <label>Allow Output Format Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSortPreference__c</fullName>
        <description>Product sort preference for this user. Currently only Chatter Follows are supported.</description>
        <inlineHelpText>Select &quot;Followed&quot; to display products you follow in Chatter before others when adding to quote.</inlineHelpText>
        <label>Product Sort Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Followed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ResetProductLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether Product Lookup data (guided selling questions, search filters and search results) are cleared after user selects desired products.</description>
        <inlineHelpText>Check to clear search filters and results every time you add products to your quotes. Otherwise, your previous selections are kept.</inlineHelpText>
        <label>Reset Product Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Theme__c</fullName>
        <description>Field that will be set by Select Theme custom link, once one is selected.</description>
        <label>Theme</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>